--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
 	"name": "hermione-run-tests",
 	"description": "Run tests for each stub api consistently",
 	"version": "0.1.0",
+	"scripts": {
+		"selenium-standalone": "selenium-standalone",
+		"json-server": "json-server",
+		"hermione": "hermione --update-refs"
+	},
 	"author": {
 		"name": "Sergey Ubogov",
 		"email": "sergeiubogov@mail.ru"
@@ -32,5 +37,11 @@
 	},
 	"bugs": {
 		"url": "https://github.com/Sergey-Ubogov/hermione-run-tests/issues"
+	},
+	"devDependencies": {
+		"hermione": "^0.91.0",
+		"html-reporter": "^2.23.0",
+		"json-server": "^0.14.0",
+		"selenium-standalone": "^6.15.3"
 	}
 }
